data/all_generated_tests/raw_wast_tests/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2071.wast
;; 2. **Test for Correct Conditional Execution Across Imported Functions**:     - Verify that calling an imported function from within an `if` block in the host module correctly jumps to the `else` block if the function returns zero, ensuring that transitions across module boundaries do not corrupt control flow.    - **Constraint Focus**: Ensures proper branching based on values returned from imported functions.

(assert_invalid
  (module
    (import "env" "importedFunc" (func $importedFunc (result i32)))
    (func $conditional-import
      (if (result i32) (call $importedFunc)
        (then (i32.const 1))
        (else (i32.const 0))
      )
    )
  )
  "type mismatch"
)